# GroupProof

./: .gitignore  ARCHITECTURE.md  Anchor.toml  DEPLOYMENT.md  EMAIL_CLARIFICATION.md  EMAIL_SETUP.md  GEMINI_WALLET_INTEGRATION.md  JOIN_INSTRUCTIONS.md  QUICK_START.md  README.md  SENDGRID_QUICK_SETUP.md  SETUP.md  VERCEL_DEPLOYMENT.md  package-lock.json  package.json
app/: .env.example  index.html  package-lock.json  package.json  pnpm-lock.yaml  vercel.json  vite.config.ts
app/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
app/src/components/: ErrorBoundary.tsx  PhantomConnectButton.tsx
app/src/hooks/: useCountdown.ts  useProgram.ts  useTask.ts  useUserTasks.ts
app/src/idl/: smart_deadlines.json
app/src/pages/: CreateTaskPage.tsx  FinalizePage.tsx  HomePage.tsx  JoinTaskPage.tsx  SubmitProofPage.tsx  TaskDashboardPage.tsx  VotePage.tsx  WalletInfoPage.tsx
app/src/utils/: anchor.ts  gemini.ts  ipfs.ts  time.ts
backend/: .env.example  package-lock.json  package.json
backend/src/: server.js
backend/src/routes/: invites.js
backend/src/utils/: email.js  storage.js
programs/smart-deadlines/: Cargo.toml
programs/smart-deadlines/src/: lib.rs
scripts/: create-usdc-mint.sh  deploy.sh  setup-env.sh  start-dev.sh  test-local.sh
tests/: smart-deadlines.ts
