[package]
name = "smart-deadlines"
version = "0.1.0"
description = "SmartDeadlines - On-chain accountability escrow for group tasks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smart_deadlines"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
