[package]
name = "smart-deadlines"
version = "0.1.0"
description = "SmartDeadlines - On-chain accountability escrow for group tasks"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "smart_deadlines"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
